kyverno/policies/services/externalName.yaml
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: no-localhost-service
  annotations:
    policies.kyverno.io/title: Disallow Localhost ExternalName Services
    policies.kyverno.io/category: Sample
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Service
    policies.kyverno.io/description: >-
      A Service of type ExternalName which points back to localhost can potentially be used to exploit
      vulnerabilities in some Ingress controllers. This policy audits Services of type ExternalName
      if the externalName field refers to localhost.
spec:
  validationActions:
    - Deny
  matchConstraints:
    resourceRules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE", "UPDATE"]
        resources: ["services"]
  validations:
    - expression: >-
        !(
          has(object.spec.type) && object.spec.type == 'ExternalName' &&
          has(object.spec.externalName) && object.spec.externalName in ['localhost', '127.0.0.1']
        )
      message: "Service of type ExternalName cannot point to localhost."
