kyverno/policies/services/loadBalancerIP.yaml
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: restrict-load-balancer-ip
  annotations:
    policies.kyverno.io/title: Restrict LoadBalancer IP
    policies.kyverno.io/category: Best Practices
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Service
    policies.kyverno.io/description: >-
      We use Service loadBalancerIP to pin external IPs for external load
      balancer services. We should only allow specific services to specific
      addresses, in order to avoid someone hijacking an external service IP
      from their service.
spec:
  validationActions:
    - Deny
  matchConstraints:
    resourceRules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE", "UPDATE"]
        resources: ["services"]
  validations:
    - expression: "!has(object.spec.loadBalancerIP)"
      message: "loadBalancerIP is not allowed."
